--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/all.css">
     <title>Project_11</title>
 </head>
 <body>
+    <div class="romb"></div>
+    <div class="circle"></div>
     <div class="main">
         <div class="mw">
             <div class="mw1">
@@ -24,13 +27,18 @@
                 </form>
                 <p>Type your message here:</p>
                 <form>
-                    <input class="type" text="" placeholder="">
+                    <input class="type" name="message"rows="7" cols="30">
                 </form>
                 <div>
                     <p><a href="#" class="ad">Need additional help?</a></p>
                 </div>
+                <button class="one">CONTACT ME</button>
             </div>
-            <div class="mg"></div>
+            <div class="mg">
+                <p class="cont2">Hello, User!</p>
+                <p class="lst">If you want to know more info about our project than</p>
+                <button class="btn"><i class="fas fa-chevron-left"></i></button>
+            </div>
         </div>
     </div>
 </body>
