--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </form>
                 <p>Type your message here:</p>
                 <form>
-                    <input class="type" name="message"rows="7" cols="30">
+                    <textarea class="type"></textarea>
                 </form>
                 <div>
                     <p><a href="#" class="ad">Need additional help?</a></p>
